// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PsammeadBulletedList should render correctly from ltr 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  list-style-type: none;
}

.c0 > li::before {
  content: ' ';
  display: inline-block;
  width: 1.5rem;
  background: url('data:image/svg+xml;base64,') no-repeat;
  left: center;
  margin-left: -1.5rem;
  background-size: 30%;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<ul
  class="c0"
  dir="ltr"
>
  <li>
    First item on the list
  </li>
  <li>
    Second item on the list
  </li>
  <li>
    Final list item
  </li>
</ul>
`;

exports[`PsammeadBulletedList should render correctly from rtl 1`] = `
.c0 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  list-style-type: none;
}

.c0 > li::before {
  content: ' ';
  display: inline-block;
  width: 1.5rem;
  background: url('data:image/svg+xml;base64,') no-repeat;
  right: center;
  margin-right: -1.5rem;
  background-size: 30%;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<ul
  class="c0"
  dir="rtl"
>
  <li>
    العنصر الأول في القائمة
  </li>
  <li>
    البند الثاني في القائمة
  </li>
  <li>
    عنصر القائمة النهائية
  </li>
</ul>
`;
